# WhatsOpt

./: .babelrc  .eslintignore  .eslintrc  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .npmrc  .prettierignore  .project  .rubocop.yml  .ruby-gemset  .simplecov  .travis.yml  .yarnrc.yml  CHANGELOG  Capfile  Dockerfile  Gemfile  Guardfile  README.md  VERSION  babel.config.js  docker-compose.yml  eslint.config.cjs  package.json  requirements.txt  test.json
services/: Makefile  pyproject.toml  requirements.txt  run_server.py  run_surrogate_server.py  setup.py  surrogate_store.thrift  whatsopt_services.thrift
services/tests/: test_hsic.py  test_openturns_surrogates.py  test_optimizer_services.py  test_optimizer_store.py  test_segmoomoe_optimizer.py  test_segomoe_optimizer.py  test_sensitivity_services.py  test_surrogate_server.py  test_surrogate_services.py  test_surrogate_store.py  test_utils.py
services/whatsopt/: __main__.py  openturns_surrogates.py  surrogate_server_handler.py
services/whatsopt/services/: OptimizerStore-remote  OptimizerStore.py  SurrogateStore-remote  __init__.py
services/whatsopt/surrogate_server/: SurrogateStore-remote  ttypes.py
services/whatsopt/surrogate_store/: surrogate_server_handler.py  surrogate_store.py
services/whatsopt_server/: __main__.py
services/whatsopt_server/computations/: hsic.py
services/whatsopt_server/handlers/: administration_handler.py  optimizer_store_handler.py  (+2 more)
services/whatsopt_services/: __main__.py  openturns_surrogates.py  surrogate_server_handler.py  surrogate_store.py
(+1108 files in other folders)
