[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whatsopt_server"
version = "0.1.0"
description = "WhatsOpt Python services implemented with Apache Thrift"
authors = [{ name = "Rémi Lafage", email = "remi.lafage@onera.fr" }]
url = "https://github.com/OneraHub/WhatsOpt"
requires-python = ">=3.8"

[project.scripts]
whatsopt_server = "whatsopt_server.__main__:main"
